# air-lusi

./: .gitattributes  .gitignore  CHANGELOG.md  CODEMETA.yaml  CODEOWNERS  README.md  pyproject.toml  requirements.txt
data/: README.md  air_lusi_spectra.nc
example_usage/: relab_spectra.ipynb  srfs.ipynb  using_air_lusi_data.ipynb
instrument_characterization/: 3320_lsfs_valid_range.nc  README.md
localcache/: README.md
utils/: air_vac_wavelength.py
